Finalizing patterns in switch and record patterns features.