@@ -1,10 +1,9 @@
 /*
  * @test /nodynamiccopyright/
  * @bug 8206986
- * @summary Verify "case null" is not allowed for --release 16
- * @compile/fail/ref=SwitchNullDisabled.out -XDrawDiagnostics --release 16 SwitchNullDisabled.java
- * @compile/fail/ref=SwitchNullDisabled-preview.out -XDrawDiagnostics SwitchNullDisabled.java
- * @compile --enable-preview -source ${jdk.version} SwitchNullDisabled.java
+ * @summary Verify "case null" is not allowed for --release 16, 20
+ * @compile/fail/ref=SwitchNullDisabled.out -XDrawDiagnostics --release 20 SwitchNullDisabled.java
+ * @compile SwitchNullDisabled.java
  */
 
 public class SwitchNullDisabled {
